<resources>
    <string name="app_name">管理平台</string>
   <string name="customer_phone_number">0574-63819202</string>
    <string name="nhb">年惠宝</string>
    <string name="message">消息</string>
    <string name="submit">提交</string>
    <string name="submit_success">提交成功</string>
    <string name="shop_phone">门店账号：%1$s</string>
    <string name="submit_fail">提交失败</string>
    <string name="login">登录</string>
    <string name="login_fail">登录失败</string>
    <string name="login_out">退出登录</string>
    <string name="scan_qrcode">扫一扫</string>
    <string name="customer_phone">联系客服</string>
    <string name="network_error">网络连接错误</string>
    <!--login error-->
    <string name="login_phone_empty">请输入手机号码</string>
    <string name="login_pwd_empty">请输入密码</string>
    <string name="login_phone_error">请输入正确的手机号码</string>

    <string name="tips_open_camera_error">请确保允许应用使用相机权限后重试!</string>
    <string name="update_app_tip">有新版本更新!</string>
    <string name="update_app_tip_no">已是最新版本</string>
    <string name="no_message">暂时没有消息</string>
    <string name="move_to_task_back_tip">再按一次退回</string>

    <!--我的-->
    <string name="update_pwd">修改密码</string>
    <string name="suggestion">意见反馈</string>
    <string name="about">关于</string>
    <string name="use_agreement">用户协议</string>
    <string name="update_app_version">版本更新</string>
    <string name="update_app_new_version">有新版本更新!</string>
    <string name="update_app_no_new_version">已是最新版本</string>
    <string name="about_me_copyright">Copyright© 2016\nNianHuiBao Corparition.All Rights Reserved</string>
    <string name="about_me_sersion_name">（version%1$s）</string>

    <!--意见反馈-->
    <string name="suggest_empty_content">请留下您的建议，感谢您的支持！</string>
    <string name="suggest_empty_phone">请填写您的联系电话，感谢您的支持！</string>
    <string name="suggest_empty_phone_error">请填写正确的的联系电话，感谢您的支持！</string>
    <!--修改密码-->
    <string name="update_pwd_title">更改密码</string>
    <string name="update_pwd_src">原密码：</string>
    <string name="update_pwd_new">新密码：</string>
    <string name="update_pwd_again">确认密码：</string>
    <string name="update_pwd_again_new_dif">两次密码不一致</string>
    <string name="update_pwd_again_src_nodif">原密码和新密码一致</string>
    <string name="update_pwd_success">密码修改成功</string>
    <string name="update_pwd_fail">密码修改失败</string>

    <!--tip-->
    <string name="empty_goods">暂无商品数据</string>
    <string name="message_card_number">会员卡号：%1$s</string>
    <string name="message_card_phone">手机号：%1$s</string>
    <string name="message_trade_no">订单号：%1$s</string>
    <string name="card_scan_success">恭喜验证成功！</string>
    <string name="card_scan_fail">验证失败了！</string>
    <string name="order_detail_confirm_order">确认订单</string>
    <string name="order_detail_complete_order">完成订单</string>
    <string name="order_detail_cancel_order">取消订单</string>

    <string name="order_detail_state_complete">已完成</string>
    <string name="order_detail_state_cancel">已取消</string>
    <string name="order_detail_state_to_confirm">待确认</string>
    <string name="order_detail_state_confirm">已确认</string>
    <string name="order_detail_state_update_fail">操作失败</string>
    <string name="order_detail_state_update_suceess">操作成功</string>

</resources>
