<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_F2F2F2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/update_pwd_src"
                android:textColor="@color/c_666666"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_pwd_src"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                tools:text="123asdfsdf"
                android:background="@null"
                android:textColor="@color/c_666666"
                android:textCursorDrawable="@null"
                android:singleLine="true"
                android:textSize="18sp" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/c_EEEEEE"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/update_pwd_new"
                android:textColor="@color/c_666666"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_pwd_new"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:singleLine="true"
                tools:text="123asdfsdf"
                android:background="@null"
                android:textColor="@color/c_666666"
                android:textCursorDrawable="@null"
                android:textSize="18sp" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/c_EEEEEE"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/update_pwd_again"
                android:textColor="@color/c_666666"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_pwd_again"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                tools:text="123asdfsdf"
                android:singleLine="true"
                android:textColor="@color/c_666666"
                android:background="@null"
                android:textCursorDrawable="@null"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/selector_btn"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="20dp" />
</LinearLayout>